syntax = "proto3";

package com.charroux;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.charroux.auction";
option java_outer_classname = "AuctionServiceProto";

service AuctionService {
  rpc CarAuction(stream Bidding) returns (stream BidResponse);
  rpc CarModels(google.protobuf.Empty) returns (CarModelsToBeRented);
}

enum AuctionStatus {
  ACTIVE = 0;
  ENDED_BY_TIME = 1;
  ENDED_BY_MAX_PRICE = 2;
  NO_BIDS = 3;
}

message Bidding {
  string carRentalCompanyId = 1;
  string carModelId = 2;           // Format: "brand:model" (ex: "Ferrari:F8")
  uint32 bidAmount = 3;
  int64 timestamp = 4;             // Timestamp pour gérer les enchères simultanées
}

message BidResponse {
  bool winning = 1;
  string plateNumber = 2;
  uint32 finalPrice = 3;           // Prix final (soit enchère gagnante, soit lowestPrice si aucune enchère)
  AuctionStatus status = 4;        // Statut de l'enchère
  int32 remainingSeconds = 5;      // Temps restant (si ACTIVE)
  string currentHighestBidder = 6; // ID de l'enchérisseur actuel
  uint32 currentHighestBid = 7;    // Montant de l'enchère actuelle
}

message CarModel {
  string brand = 1;
  string model = 2;
  uint32 lowestPrice = 3;
  uint32 highestPrice = 4;
}

message CarModelsToBeRented {
  repeated CarModel cars = 1;
}